<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_my_app_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="4dp"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_app"
                android:textColor="@color/heading_gray"
                android:textSize="20sp"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>


    <Button

        android:id="@+id/btn_view_gallery"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:elevation="6dp"
        android:background="@drawable/blue_bg_button"
        android:gravity="center"
        android:text="@string/view_gallery"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_my_app_activity"
        />

    <Button

        android:id="@+id/btn_view_latest_location"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:elevation="6dp"
        android:background="@drawable/blue_bg_button"
        android:gravity="center"
        android:text="@string/view_latest_location"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_view_gallery"

        />





</androidx.coordinatorlayout.widget.CoordinatorLayout>
