<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6388DF"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_up_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_sign_up_activity" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:layout_marginTop="35dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="590dp"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:boxBackgroundColor="#FFFFFF"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:boxStrokeColor="#DDDDDD"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="#AAAAAA">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_input_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#AAAAAA"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:boxBackgroundColor="#FFFFFF"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:boxStrokeColor="#DDDDDD"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="#AAAAAA">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textColorHint="#AAAAAA"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:boxBackgroundColor="#FFFFFF"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxStrokeColor="#DDDDDD"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="#AAAAAA"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textColorHint="#AAAAAA"
                    android:textSize="16sp"
                   />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reenter_password_layout_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:boxBackgroundColor="#FFFFFF"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxStrokeColor="#DDDDDD"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="#AAAAAA"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reenter_password_input_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_enter_password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textColorHint="#AAAAAA"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/terms_container_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/agree_checkbox_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/light_blue"
                    android:checked="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_agree_to_the"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_services"
                    android:textColor="@color/light_blue"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button

                android:id="@+id/btn_sign_up"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/blue_bg_button"
                android:elevation="6dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:translationZ="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/existing_user"

                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

